mobile layout gap fix

--- a/main.css
+++ b/main.css
@@ -209,7 +209,7 @@ footer {
     grid-gap: calc(2*var(--base-margin));
     grid-auto-rows: 30vmin;
     margin-top: var(--base-margin);
-    margin-bottom: var(--base-margin);
+    margin-bottom: calc(2*var(--base-margin));
   }
 
   .art-item {
